# rsweb-tmpl

./: .gitignore  Cargo.toml  README.md  SETUP.md  simulate.json
blogs/: welcome-to-webrs.md
crates/google-jwt/: Cargo.toml
crates/google-jwt/src/: client.rs  error.rs  jwk.rs  key_provider.rs  lib.rs  structure.rs  token.rs  unverified_token.rs
crates/rsweb-api/: Cargo.toml
crates/rsweb-api/src/: lib.rs  routes.rs
crates/rsweb-api/src/endpoints/: signin.rs  signup.rs
crates/rsweb-api/src/filters/: cookies.rs  mod.rs
crates/rsweb-app/: Cargo.toml
crates/rsweb-app/src/: lib.rs  routes.rs
crates/rsweb-app/src/components/: load_theme.rs  mod.rs  nav.rs
crates/rsweb-app/src/filters/: blog.rs  cookies.rs  mod.rs
crates/rsweb-app/src/pages/: about.rs  blog.rs  mod.rs  portal.rs  root.rs
crates/rsweb-auth/: Cargo.toml
crates/rsweb-auth/src/: claims.rs  errors.rs  lib.rs
crates/rsweb-cache/: Cargo.toml
crates/rsweb-cache/src/: lib.rs
crates/rsweb-crypto/: Cargo.toml
crates/rsweb-crypto/src/: cast.rs  ed25519.rs  errors.rs  generate.rs  hash.rs  lib.rs
crates/rsweb-database/: Cargo.toml
crates/rsweb-database/src/: lib.rs  user.rs
crates/rsweb-utils/: Cargo.toml
crates/rsweb-utils/src/: lib.rs
populate/: Cargo.toml
populate/src/: main.rs  simulate.rs
sql/: 001_users.sql  002_tokens.sql
stack/: Cargo.toml
stack/src/: main.rs
static/: app.css  router.js
