[package]
name = "google-jwt"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
base64.workspace = true
async-trait = { version = "0.1.86" }
headers = "0.4.0"
ring = { version = "0.17.9", features = ["std"] }
